--- a/workshop3/style.css
+++ b/workshop3/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: "Gilroy-Bold";
-  src: url("./font/Gilroy-Bold.woff2S");
+  src: url("./font/Gilroy-Bold.woff2");
 }
 
 * {
