--- a/workshop9/style.css
+++ b/workshop9/style.css
@@ -131,6 +131,10 @@
   box-shadow: 15px 25px 56px 6px #0000000f;
 }
 
+.board__menu-visible {
+  visibility: hidden;
+}
+
 .board__menu h2 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
@@ -166,7 +170,7 @@
   flex-direction: column;
   align-items: start;
   gap: 11px;
-  margin-top: 12px;
+  /* margin-top: 12px; */
   margin-left: 21px;
   list-style-type: none;
 }
@@ -270,7 +274,7 @@
   grid-template-rows: 0;
 }
 
-.products-items figcaption {
+.products-items .figcaption {
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -446,7 +450,7 @@
   gap: 30px;
 }
 
-.footer-board__content__left p {
+.footer-board__content__left h2 {
   width: 360px;
   height: 100px;
   font-family: "Lato", sans-serif;
@@ -465,6 +469,7 @@
 
 .footer-board__content__right__text {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 557px;
